--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,15 @@
   padding: 12px 16px;
 }
 
+.submit-button {
+  margin-top: 64px;
+  background-color: #ffffff;
+  color: black;
+  border: transparent;
+  border-radius: 4px;
+  padding: 12px 16px;
+}
+
 .selected-answer {
   background-color: #7e7e7e;
   color: black;
